# cspec

./: CMakeLists.txt  Dockerfile  README.md  README_ES.md  cspecs.pc.in  makefile
.github/workflows/: asciidoctor-ghpages.yml  publish-docker-image.yml
cspecs/: cspec.h
docs/: README.adoc
examples/: complete_spec.c  simple_spec.c
